--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Result: {{ counter }}</p>
       <input type="text" v-model="name" />
       <button v-on:click="resetInput">Reset Input</button>
-      <p>Your Name: {{ name }}</p>
+      <p>Your Name: {{ outPutFullname() }}</p>
     </section>
   </body>
 </html>
