--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
       <h1>Vue Dynamic Styling</h1>
     </header>
     <section id="styling">
-      <div
-        class="demo"
-        :class="{active: boxSelected }"
-        @click="boxSelect"
-      ></div>
+      <div class="demo" :class="boxClasses" @click="boxSelect"></div>
       <div class="demo"></div>
       <div class="demo"></div>
     </section>
