--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
   </head>
   <body>
     <header>
-      <h1>Vue Styling</h1>
+      <h1>Vue Course Goals</h1>
     </header>
-    <section id="assignment">
-      <!-- 1) Fetch the user input and use it as a CSS class -->
-      <!-- The entered class should be added to the below paragraph -->
-      <input type="text" v-model="userClass" />
-      <!-- (available classes: "user1", "user2") -->
-      <p :class="[userClass, visibilityClasses]">Style me!</p>
-      <button @click="toggleVisibility">Toggle Paragraph</button>
-      <!-- 2) Use the "visible" and "hidden" classes to show/ hide the above paragraph -->
-      <!-- Clicking the button should toggle between the two options -->
-
-      <!-- 3) Add dynamic inline styling to the below paragraph and let the user enter a background-color -->
-      <input type="text" v-model="userColor" />
-      <p :style="{backgroundColor: userColor}">Style me inline!</p>
+    <section id="user-goals">
+      <h2>My course goals</h2>
+      <input type="text" v-model="newGoal" />
+      <button @click="addGoal">Add Goal</button>
+      <p v-show="goals.length === 0">
+        No goals have been added yet - please start adding some!
+      </p>
+      <ul v-show="goals.length > 0">
+        <li v-for="goal in goals" @click="removeGoal">{{goal}}</li>
+      </ul>
     </section>
   </body>
 </html>
