--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <h2>My course goals</h2>
       <input type="text" v-model="newGoal" />
       <button @click="addGoal">Add Goal</button>
-      <p v-show="goals.length === 0">
+      <p v-if="goals.length === 0">
         No goals have been added yet - please start adding some!
       </p>
-      <ul v-show="goals.length > 0">
+      <ul v-else>
         <li v-for="goal in goals" @click="removeGoal">{{goal}}</li>
       </ul>
     </section>
