v-for with object and value, key, index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </li>
       </ul>
       <ul>
-        <li v-for="value in {name: 'Max', age: 31}">{{value}}</li>
+        <li v-for="(value, key, index) in {name: 'Max', age: 31}">
+          {{key}}: {{value}}
+        </li>
       </ul>
     </section>
   </body>
