v-for: looping through a range of numbers

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         </li>
       </ul>
       <ul>
+        <li v-for="num in 10">{{num}}</li>
+      </ul>
+      <!-- <ul>
         <li v-for="(value, key, index) in {name: 'Max', age: 31}">
           {{key}}: {{value}}
         </li>
-      </ul>
+      </ul> -->
     </section>
   </body>
 </html>
