--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       </p>
       <ul v-else>
         <li v-for="(goal, index) in goals" @click="removeGoal(index)">
-          {{goal}}
+          <p>{{goal}}</p>
+          <input type="text" @click.stop />
         </li>
       </ul>
-      <ul>
+      <!-- <ul>
         <li v-for="num in 10">{{num}}</li>
-      </ul>
+      </ul> -->
       <!-- <ul>
         <li v-for="(value, key, index) in {name: 'Max', age: 31}">
           {{key}}: {{value}}
