Vue app lifecycles hooks

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <button @click="setText">Set Text</button>
       <p>{{ message }}</p>
     </section>
-    <section id="app2">
+    <!-- <section id="app2">
       <input type="text" ref="userText" />
       <button @click="setText">Set Text</button>
       <p>{{ message }}</p>
-    </section>
+    </section> -->
   </body>
 </html>
